colcon_ws/log/build_2022-09-10_03-33-23/dasc_robot/stderr.log
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp: In function ‘int main(int, char**)’:
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:66:8: error: ‘std::this_thead’ has not been declared
   66 |   std::this_thead::sleep_for(2000ms);
      |        ^~~~~~~~~~
/root/colcon_ws/src/robot-framework/src/joystick_control.cpp:73:16: error: ‘node’ was not declared in this scope
   73 |   rclcpp::spin(node);
      |                ^~~~
make[2]: *** [CMakeFiles/joystick_controller.dir/build.make:63: CMakeFiles/joystick_controller.dir/src/joystick_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:308: CMakeFiles/joystick_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
